# web_vbvis

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri.yml
scripts/: gen-examples.mjs
src/: main.ts
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src/data/: examples.ts
src/embedder/: place3d.ts
src/hydrogens/: fill.ts
src/orbitals/: lathe.ts  orbital.ts
src/scene/: atoms.ts  color-schemes.ts  index.ts  labels.ts  orbitals.ts  setup.ts
src/services/: rdkit.ts  resolve3d.ts
src/styles/: main.css
src/ui/: controls.ts  jsme-panel.ts  tooltip.ts
src/utils/: classify.ts  pi.ts
tests/: examples.test.ts
